@@ -38,14 +38,6 @@
 #include "tree.h"
 #include "lib/getopt.h"
 
-#if (defined __CYGWIN__ || defined __MINGW32__)
-#define EXEC_LDFLAGS	"-Wl,--export-dynamic -Wl,--enable-auto-import"
-#define MODULE_LDFLAGS	"-Wl,--enable-auto-import"
-#else
-#define EXEC_LDFLAGS	"-rdynamic"
-#define MODULE_LDFLAGS	""
-#endif
-
 
 /*
  * Global variables
@@ -694,8 +686,13 @@ process_module (struct filename *fn)
       strcat (name, ".");
       strcat (name, COB_MODULE_EXT);
     }
-  sprintf (buff, "%s -shared %s %s -o %s %s",
-	   cob_cc, MODULE_LDFLAGS, cob_ldflags, name, fn->object);
+#if (defined __CYGWIN__ || defined __MINGW32__)
+  sprintf (buff, "%s -shared -Wl,--enable-auto-import %s -o %s %s %s",
+	   cob_cc, cob_ldflags, name, fn->object, cob_libs);
+#else
+  sprintf (buff, "%s -shared %s -o %s %s",
+	   cob_cc, cob_ldflags, name, fn->object);
+#endif
   return process (buff);
 }
 
@@ -715,8 +712,13 @@ process_link (struct filename *l)
   if (output_name)
     strcpy (name, output_name);
 
-  sprintf (buff, "%s %s %s -o %s %s %s",
-	   cob_cc, EXEC_LDFLAGS, cob_ldflags, name, objs, cob_libs);
+#if (defined __CYGWIN__ || defined __MINGW32__)
+  sprintf (buff, "%s -Wl,--export-dynamic -Wl,--enable-auto-import %s -o %s %s %s",
+	   cob_cc, cob_ldflags, name, objs, cob_libs);
+#else
+  sprintf (buff, "%s -rdynamic %s -o %s %s %s",
+	   cob_cc, cob_ldflags, name, objs, cob_libs);
+#endif
   return process (buff);
 }
 
