@@ -1,3 +1,8 @@
+2004-03-12  Keisuke Nishida  <knishida@wind.sannet.ne.jp>
+
+	* cobc.c (process_module, process_link): Modify compile options
+	for Win32.
+
 2004-03-10  Keisuke Nishida  <knishida@wind.sannet.ne.jp>
 
 	* parser.y (lock_mode_clause): Full parse without codegen.
